--- a/Res/style.css
+++ b/Res/style.css
@@ -1,4 +1,5 @@
 body{
+	font-family: "Roboto";
 	background-color: rgb(211,211,211);
 }
 header{
@@ -7,14 +8,20 @@ header{
 	align-items: center;
 	color: #FFFFFF;
 	font-family:"verdana";
-	width:100%;
 
 }
+input[type="radio"]:checked+label{
+	font-weight: 700;
+	font-style: italic;
+} 
 h1{
 	text-align: center;
 }
 .content{
 	background-color: #FFFFFFFF;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 	width: 65%;
 	margin-top:16px;
 	margin-bottom: 16px;
@@ -27,8 +34,6 @@ h1{
 	box-shadow: 0px 0px 4px #000000;
 	border-radius: 4px; 
 	align-items:center;
-	
-
 }
 .movie{
 	width: 80%;
@@ -54,10 +59,10 @@ table.movie tr td, table.movie tr th{
 	border-style: solid;
 }
 .red{
-	background-color: #FF0000;
+	background-color: rgb(255, 109, 109);
 }
 .green{
-	background-color: #00FF00;
+	background-color: rgb(110, 255, 110);
 }
 .poster{
 	width: 100%;
@@ -70,13 +75,19 @@ h3{
 }
 
 ul.a{ 
+
 	list-style-type: circle;
 }
 
 .button{
-	position: relative;
-  	left: 50%; 
-  	margin-left: -100px;
+	width: 40%;
+	margin-left: 30%;
+	margin-right: 30%;
+	font-family: "Roboto";
+	font-weight: 500;
+	background: #a32638;
+	color: white;
+	border: 0;
 }
 
 .BeAfraid{
@@ -101,7 +112,7 @@ ul.a{
 	  the right of the text. It also needs to look appealing and big enough
 	  where the users can read it.*/
 	  float: right;
-	  position
+
 	  bottom:10%;
 	  right:10%;
 }
@@ -117,14 +128,19 @@ li>a:visited{
 li>a{
 	color:white;
 }
-
+.navClass{
+	text-align: center;
+}
 .navClass > ul {
 	background-color: grey;
 	font-size: 100%;
 	color: white;
+	display: flex;
 }
 
 .navClass > ul > li {
+	flex-grow: 1;
+	z-index: 10;
 	list-style-type: none;
 	display: inline-block;
 	padding: 1% 2%;
@@ -146,14 +162,15 @@ ul.sub_menu{
 	background-color: silver;
 	color: black;
 	list-style-type: none;
-	width:400px;
-	padding-left: 5px;
+	width: fit-content;
+	padding-left: 20px;
+	padding-right: 20px;
 	padding-top: 5px;
 	opacity: 0;
 }
 
 ul.sub_menu li{
-	padding-left: 25px;
+	
 	padding-top: 5px;
 	padding-bottom: 5px;
 
@@ -204,7 +221,12 @@ li{
 
 .imgsize{
 	width: 33%;
-	height: 300px;
+}
+
+.content #images{
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .picRight{
@@ -294,4 +316,103 @@ li{
 
 .blue{
 	background-color: blue;
+}
+
+#MovieResult{
+	text-align: center;
+	font-size: 30px;
+	padding-top: 10px;
+}
+
+#herc{
+	height: 64px;
+}
+
+#quizButton{
+	transition-duration: 0.4s;
+	border-radius: 4px;
+	height: 60%;
+	font-size: 30px;
+	font-weight: 700;
+	font-family: "Roboto";
+	background: #a32638;
+	color: white;
+}
+#quizButton:hover{
+	background: darkred;
+}
+
+input[type=radio], label, .question
+{
+	display: none;
+}
+
+@media screen and (max-width: 800px){
+	body{
+		font-size: 30px;
+	}
+	.herctable{
+		align-self: center;
+		font-size: 20px;
+	}
+    .content{
+		width: 90%;
+	}
+	.content h1{
+		font-size: 30px;
+	}
+	button, input[type=file]{
+		margin-left: 0;
+		margin-right: 0;
+		font-size: 30px;
+		width: 100%;
+		height: 50px;
+		align-self: center;
+	}
+	.buttoncompare{
+		margin-left: 0;
+		margin-right: 0;
+	}
+	ul.sub_menu{
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	.BeAfraid{
+		width: 300px;
+	}
+	.movie{
+		width: 95%;
+	}
+	.movie .info{
+		font-size: 20px;
+	}
+}
+
+@media screen and (max-width: 600px){
+	.navClass{
+		font-size: 15px;
+	}
+	ul.sub_menu{
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+	body{
+		font-size: 20px;
+	}
+	.herctable{
+		align-self: center;
+		font-size: 60%;
+	}
+	button, input[type=file]{
+		font-size: 20px;
+	}
+	.movie .info{
+		font-size: 15px;
+	}
+	.movie .title{
+		font-size: 20px;
+	}
+	.movie .info .centercell{
+		font-size: 12px;
+	}
 }
